[gd_scene load_steps=13 format=3 uid="uid://cvnehmqwtuemd"]

[ext_resource type="Texture2D" uid="uid://yypgdyqt6n7v" path="res://assets/graphics/door.png" id="1_ghhbl"]
[ext_resource type="Script" path="res://objects/door/door.gd" id="1_q8385"]
[ext_resource type="Script" path="res://scripts/nodes/interactable.gd" id="2_firv1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhwlk"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_8qnf7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 32, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LightOccluder2D:occluder_light_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qyma1"]
resource_name = "closed"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 32, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LightOccluder2D:occluder_light_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5iaue"]
resource_name = "open"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(32, 0, 32, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LightOccluder2D:occluder_light_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2a8qc"]
_data = {
"RESET": SubResource("Animation_8qnf7"),
"closed": SubResource("Animation_qyma1"),
"open": SubResource("Animation_5iaue")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_0utes"]
polygon = PackedVector2Array(0, -16, 0, -12, 16, -12, 16, -16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7pqu"]
size = Vector2(16, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7uy6"]
size = Vector2(16, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ol6i4"]
size = Vector2(16, 7)

[node name="Door" type="Node2D"]
script = ExtResource("1_q8385")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(8, -8)
shape = SubResource("RectangleShape2D_xhwlk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ghhbl")
centered = false
offset = Vector2(-16, -16)
region_enabled = true
region_rect = Rect2(0, 0, 32, 24)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_2a8qc")
}
autoplay = "closed"

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_0utes")
occluder_light_mask = 0

[node name="Interactable_South" type="Area2D" parent="."]
script = ExtResource("2_firv1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable_South"]
position = Vector2(8, 4)
shape = SubResource("RectangleShape2D_e7pqu")

[node name="Interactable_North" type="Area2D" parent="."]
script = ExtResource("2_firv1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable_North"]
position = Vector2(8, -20)
shape = SubResource("RectangleShape2D_e7pqu")

[node name="InsideArea" type="Area2D" parent="."]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InsideArea"]
position = Vector2(8, -3.5)
shape = SubResource("RectangleShape2D_i7uy6")

[node name="OusideArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OusideArea"]
position = Vector2(8, 3.5)
shape = SubResource("RectangleShape2D_ol6i4")

[connection signal="interacted" from="Interactable_South" to="." method="_on_interacted"]
[connection signal="interacted" from="Interactable_North" to="." method="_on_interacted"]
[connection signal="body_entered" from="InsideArea" to="." method="_on_inside_area_body_entered"]
[connection signal="body_entered" from="OusideArea" to="." method="_on_ouside_area_body_entered"]
