extends Node2D

# ------------------------------------------------------------------------------
# Signals
# ------------------------------------------------------------------------------
signal elf_outside(inside : bool)

# ------------------------------------------------------------------------------
# Constants and ENUMs
# ------------------------------------------------------------------------------
const ANIM_OPEN : StringName = &"open"
const ANIM_CLOSED : StringName = &"closed"

# ------------------------------------------------------------------------------
# Export Variables
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# Variables
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# Onready Variables
# ------------------------------------------------------------------------------
@onready var _anim: AnimationPlayer = %AnimationPlayer


# ------------------------------------------------------------------------------
# Setters / Getters
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# Override Methods
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# Private Methods
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# Public Methods
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# Handler Methods
# ------------------------------------------------------------------------------
func _on_interacted() -> void:
	if _anim.current_animation == ANIM_OPEN:
		_anim.play(ANIM_CLOSED)
	else:
		_anim.play(ANIM_OPEN)

func _on_inside_area_body_entered(body: Node2D) -> void:
	if body is Elf:
		elf_outside.emit(false)

func _on_ouside_area_body_entered(body: Node2D) -> void:
	if body is Elf:
		elf_outside.emit(true)
